--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,21 @@
-<ul><% @users.each do |user|%>
-  <li><%= link_to user.username, user %></li>
-  <% end %>
-</ul>
+<table border=1>
+  <tr>
+    <th>
+      Username
+    </th>
+    <th>
+      Score
+    </th>
+    <th>
+      Average Score
+    </th>
+  </tr>
+  <ul><% @users.sort{ |a,b| b.count_cheers <=> a.count_cheers }.each do |user|%>
+  <tr>
+    <td align="center"><%= link_to user.username, user %></td>
+    <td align="center"><%= user.count_cheers %></td>
+    <td align="center"><%= user.average_cheers_per_goal %>
+    </td>
+  </tr>
+<% end %>
+</table>
