Locked down goal page from non-logged in users, made the site more navigable with more links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<table border=1>
+		<tr>
+			<th>
+				<%= link_to "Goals", goals_url %>
+			</th>
+			<th>
+				<%= link_to "Leaderboard", users_url %>
+			</th>
+			<th>
+				<%= link_to "Make a New Goal", new_goal_url %>
+			</th>
+		</tr>
+	</table>
+
   <%= button_to("Log Out", session_url, method: :delete) if !!current_user %>
 
 <%= yield %>
